fix z-index issue

--- a/theme/anidia-theme/src/css/components/_card.scss
+++ b/theme/anidia-theme/src/css/components/_card.scss
@@ -25,7 +25,7 @@
       @include desktop {
         position: absolute;
         top: 0;
-        z-index: 1;
+        z-index: 2;
         width: 100%;
         max-width: calc(100% - 40px);
         left: 20px;
